Fixed Font Style :D

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Gothic+A1/');
+
 * {
     font-family: 'Century Gothic';
     user-select: none;
