--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Gothic+A1/');
 
 * {
-    font-family: 'Century Gothic';
+    font-family: 'Gothic A1';
     user-select: none;
     margin: 0;
     padding: 0;
